--- a/meta-comodoo/README
+++ b/meta-comodoo/README
@@ -27,6 +27,9 @@ This layer depends on:
   layers: meta-eca
   branch: master
 
+  URI: git://github.com/facebook/openbmc.git
+  branch: master
+
   URI: git://git.openembedded.org/meta-openembedded
   layers: meta-gnome, meta-oe, meta-python
   branch: krogoth
@@ -65,6 +68,7 @@ BBLAYERS ?= " \
     /path/to/yocto/meta-cloud-services/meta-openstack \
     /path/to/yocto/meta-comodoo/meta-comodoo \
     /path/to/yocto/meta-eca/meta-eca \
+    /path/to/yocto/meta-openbmc \
     /path/to/yocto/meta-openembedded/meta-gnome \
     /path/to/yocto/meta-openembedded/meta-oe \
     /path/to/yocto/meta-openembedded/meta-python \
@@ -88,17 +92,20 @@ Now, let see how to build the comodoo image for a RaspberryPi 3:
 4. git clone git://git.yoctoproject.org/meta-cloud-services
 5. git clone git://github.com/sarnold/meta-small-arm-extra.git
 6. git clone git://git.yoctoproject.org/meta-eca
-7. git clone git://git.yoctoproject.org/meta-raspberrypi
+7. git clone git://github.com/facebook/openbmc.git meta-openbmc
+   # Notice that in this case, you have to provide the name of the folder
+   # where to clone the repo
+8. git clone git://git.yoctoproject.org/meta-raspberrypi
    # No need to checkout another branch, only master includes raspberrypi3.conf
-8. git clone git://github.com/mozilla-japan/meta-browser.git
+9. git clone git://github.com/mozilla-japan/meta-browser.git
    # Default branch is firefox-45.0esr
-9. git clone git://github.com/indisoluble/meta-comodoo.git
-   # Or git clone git@github.com:indisoluble/meta-comodoo.git
-10. source oe-init-build-env
-11. cd conf/
-12.nano bblayers.conf
-   # Edit var BBLAYERS as follows:
-BBLAYERS ?= "
+10. git clone git://github.com/indisoluble/meta-comodoo.git
+    # Or git clone git@github.com:indisoluble/meta-comodoo.git
+11. source oe-init-build-env
+12. cd conf/
+13. nano bblayers.conf
+    # Edit var BBLAYERS as follows:
+BBLAYERS ?= " \
     /path/to/yocto/meta \
     /path/to/yocto/meta-poky \
     /path/to/yocto/meta-yocto-bsp \
@@ -107,6 +114,7 @@ BBLAYERS ?= "
     /path/to/yocto/meta-comodoo/meta-comodoo \
     /path/to/yocto/meta-comodoo/meta-rpi-fixed-fb \
     /path/to/yocto/meta-eca/meta-eca \
+    /path/to/yocto/meta-openbmc \
     /path/to/yocto/meta-openembedded/meta-gnome \
     /path/to/yocto/meta-openembedded/meta-oe \
     /path/to/yocto/meta-openembedded/meta-python \
@@ -115,7 +123,7 @@ BBLAYERS ?= "
   "
 
 14. nano local.conf
-   # Add following line to the end of the file:
+    # Add following line to the end of the file:
 MACHINE ?= "raspberrypi3"
 
 PREFERRED_PROVIDER_virtual/libgl = "mesa"
@@ -126,6 +134,9 @@ PREFERRED_PROVIDER_virtual/mesa = "mesa"
 BBMASK_append = " \
     /meta-cloud-services/meta-openstack/recipes-connectivity/ \
     /meta-cloud-services/meta-openstack/recipes-core/ \
+    /meta-cloud-services/meta-openstack/recipes-devtools/erlang/ \
+    /meta-cloud-services/meta-openstack/recipes-devtools/perl/ \
+    /meta-cloud-services/meta-openstack/recipes-devtools/qemu/ \
     /meta-cloud-services/meta-openstack/recipes-devtools/ruby/ \
     /meta-cloud-services/meta-openstack/recipes-extended/ \
     /meta-cloud-services/meta-openstack/recipes-graphics/ \
@@ -139,6 +150,14 @@ BBMASK_append = " \
     /meta-eca/meta-eca/recipes-kernel/ \
     /meta-eca/meta-eca/recipes-multimedia/ \
     /meta-eca/meta-eca/recipes-support/ \
+    /meta-openbmc/common/recipes-connectivity \
+    /meta-openbmc/common/recipes-core \
+    /meta-openbmc/common/recipes-extended \
+    /meta-openbmc/common/recipes-kernel \
+    /meta-openbmc/common/recipes-lib \
+    /meta-openbmc/common/recipes-support \
+    /meta-openbmc/common/recipes-tpm \
+    /meta-openbmc/common/recipes-utils \
     /meta-small-arm-extra/recipes-bsp \
     /meta-small-arm-extra/recipes-core \
     /meta-small-arm-extra/recipes-devtools/opkg \
@@ -184,8 +203,9 @@ meta-yocto-bsp    = "krogoth:8c69f7d56cbd496aa01ba0738675a170826a536b"
 meta-browser      = "firefox-45.0esr:14199ac070905b101e7bb0919748986c33374649"
 meta-openstack    = "master:6043a4a17dc5ca9080dac7789e38620b7b1aa372"
 meta-comodoo      
-meta-rpi-fixed-fb = "master:d3948afc3a9f7905392ab8359e11d586c6621b3a"
+meta-rpi-fixed-fb = "master:28072729be53fb226264d03ee86894a861f62db1"
 meta-eca          = "master:77c41b86a36fa65250deb16b13b13945afc52be4"
+meta-openbmc      = "master:d92449abeadec00df6ddfec58a53a0969721dabe"
 meta-gnome        
 meta-oe           
 meta-python       = "krogoth:895b25b387cae428c38990f4d2747603ee9dc92d"
@@ -201,7 +221,7 @@ To build an image for this hardware:
 - RaspberryPi 3
 - Eleduino 7.0 Inch 1024x600 Pixel IPS Hdmi Input Capacitive Touch Screen[1]
 
-Follow the same steps described in section II but in steps 12,
+Follow the same steps described in section II but in steps 13,
 modify the file bblayers.conf with this content instead:
 BBLAYERS ?= " \
   /home/indi_usr/Documents/comodoo/repositories/poky/meta \
@@ -212,6 +232,7 @@ BBLAYERS ?= " \
   /home/indi_usr/Documents/comodoo/repositories/poky/meta-comodoo/meta-comodoo \
   /home/indi_usr/Documents/comodoo/repositories/poky/meta-comodoo/meta-rpi-eleduino-7inch-1024x600 \
   /home/indi_usr/Documents/comodoo/repositories/poky/meta-eca/meta-eca \
+  /home/indi_usr/Documents/comodoo/repositories/poky/meta-openbmc \
   /home/indi_usr/Documents/comodoo/repositories/poky/meta-openembedded/meta-gnome \
   /home/indi_usr/Documents/comodoo/repositories/poky/meta-openembedded/meta-oe \
   /home/indi_usr/Documents/comodoo/repositories/poky/meta-openembedded/meta-python \
@@ -238,8 +259,9 @@ meta-yocto-bsp    = "krogoth:8c69f7d56cbd496aa01ba0738675a170826a536b"
 meta-browser      = "firefox-45.0esr:14199ac070905b101e7bb0919748986c33374649"
 meta-openstack    = "master:6043a4a17dc5ca9080dac7789e38620b7b1aa372"
 meta-comodoo      
-meta-rpi-eleduino-7inch-1024x600 = "master:d3948afc3a9f7905392ab8359e11d586c6621b3a"
+meta-rpi-eleduino-7inch-1024x600 = "master:28072729be53fb226264d03ee86894a861f62db1"
 meta-eca          = "master:77c41b86a36fa65250deb16b13b13945afc52be4"
+meta-openbmc      = "master:d92449abeadec00df6ddfec58a53a0969721dabe"
 meta-gnome        
 meta-oe           
 meta-python       = "krogoth:895b25b387cae428c38990f4d2747603ee9dc92d"
@@ -250,35 +272,18 @@ meta-small-arm-extra = "master:f0f64dcea0dfe5aafacb5b607002cc2acb6aa512"
 IV. HOWTO launch the kiosk
 ==========================
 
-1. Switch on the RaspberryPi.
-2. Connect by SSH to the RaspberryPi.
-3. On the SSH terminal, launch 'x11vnc &'.
-4. When the VNC server is ready, open a VNC client on your host computer.
-5. Back on the SSH terminal, execute
-   '/opt/comodoo/bin/comodoo-network-configuration.py &'
-6. On the VNC client window will appear a list of available WIFI's,
-   as well as the Ethernet connection we are currently using.
-7. Select your WIFI network and, in the next screen, type twice the
-   passphrase for the selected WIFI.
-8. If everything is OK, next to your WIFI will appear a green circle.
-   Then press 'Continue' on the top right corner.
-9. Close the VNC client window as well as the SSH session.
-10. Open a new SSH connection using the IP address assigned by the
-    WIFI router and repeat steps 3 & 4.
-11. Now, execute '/opt/comodoo/bin/comodoo-posboxless.sh &'.
-12. And then, execute '/opt/comodoo/bin/comodoo-kiosk.py &'
-13. On the VNC client window, Firefox will be launched on kiosk mode and
-    it will load the Odoo login page.
+1. Connect an "Eleduino Touch Screen"[1] & a keyboard to the RaspberryPi.
+2. Switch it on.
+3. Wait for a few seconds until a list of WIFI's appears on screen.
+4. Select and configure your own. Then press 'Continue'.
+5. A new screen will appear, where you can type the URL of the remote
+   Odoo server. Do it and press 'Use Server URL'
+6. Finally, the Odoo login page will be presented.
 
-In case, you are not interested in login in Odoo service (for example,
-if you are running an Odoo Docker image), you can also pass an URL to
-'comodoo-kiosk.py': '/opt/comodoo/bin/comodoo-kiosk.py --url <URL> &'.
-In this way, Firefox will load the specified webpage instead of the
-default page.
-
-Also notice that, in case you connected a screen to the RaspberryPi
-(like the 'Eleduino Touch Screen' mentioned above), you can ignore all
-the steps related to connect by SSH or VNC: 2, 3, 4, 9 & 10.
+In case you built an image only with VNC support, repeat the steps
+described before but after switching on the Rpi, open an SSH connection
+to the device, launch the 'x11vnc' app and then execute a VNC client
+in your host computer. From this point on, all the steps are the same.
 
 
 V. Know issues during WIFI configuration
