--- a/meta-comodoo/README
+++ b/meta-comodoo/README
@@ -24,14 +24,14 @@ This layer depends on:
   branch: master
 
   URI: git://github.com/facebook/openbmc.git
-  branch: master
+  branch: helium
 
   URI: git://git.openembedded.org/meta-openembedded
   layers: meta-gnome, meta-oe, meta-python
   branch: krogoth
 
   URI: git://github.com/sarnold/meta-small-arm-extra.git
-  branch: master
+  branch: morty
 
 
 Table of Contents
@@ -76,28 +76,53 @@ II. Build an image for Rpi3 with VNC support & fixed screen size
 
 Now, let see how to build the comodoo image for a RaspberryPi 3:
 
-1. [OPTIONAL] sudo apt-get install autoconf2.13
-2. git clone git://git.yoctoproject.org/poky
-   cd poky/
-   git checkout -b krogoth origin/krogoth
-3. git clone git://git.openembedded.org/meta-openembedded
+1. sudo apt-get install gawk wget git-core diffstat \
+   unzip texinfo gcc-multilib build-essential \
+   chrpath socat cpio python python3 \
+   libsdl1.2-dev xterm
+   # WARNING: Essentials packages for Ubuntu, check yours
+   # in the following link [1]
+2. sudo apt-get install autoconf2.13
+   sudo apt-get install mozilla-devscripts
+   # NOTICE: Required by a couple of recipes
+3. git clone git://git.yoctoproject.org/poky
+4. cd poky/
+5. git checkout -b krogoth origin/krogoth
+   git reset --hard b4df9df4624a300923a5dfc5a8f7157bef145a2a
+6. git clone git://git.openembedded.org/meta-openembedded
    cd meta-openembedded/
    git checkout -b krogoth origin/krogoth
+   git reset --hard 895b25b387cae428c38990f4d2747603ee9dc92d
    cd ..
-4. git clone git://git.yoctoproject.org/meta-cloud-services
-5. git clone git://github.com/sarnold/meta-small-arm-extra.git
-6. git clone git://github.com/facebook/openbmc.git meta-openbmc
-   # Notice that in this case, you have to provide the name of the folder
+7. git clone git://git.yoctoproject.org/meta-cloud-services
+   cd meta-cloud-services/
+   git reset --hard 6043a4a17dc5ca9080dac7789e38620b7b1aa372
+   cd ..
+8. git clone git://github.com/sarnold/meta-small-arm-extra.git
+   cd meta-small-arm-extra/
+   git reset --hard f0f64dcea0dfe5aafacb5b607002cc2acb6aa512
+   cd ..
+9. git clone git://github.com/facebook/openbmc.git meta-openbmc
+   cd meta-openbmc/
+   git reset --hard d92449abeadec00df6ddfec58a53a0969721dabe
+   cd ..
+   # NOTICE: You have to provide the name of the folder
    # where to clone the repo
-7. git clone git://git.yoctoproject.org/meta-raspberrypi
-   # No need to checkout another branch, only master includes raspberrypi3.conf
-8. git clone git://github.com/mozilla-japan/meta-browser.git
-   # Default branch is firefox-45.0esr
-9. git clone git://github.com/indisoluble/meta-comodoo.git
-  # Or git clone git@github.com:indisoluble/meta-comodoo.git
-10. source oe-init-build-env
-11. cd conf/
-12. nano bblayers.conf
+10. git clone git://git.yoctoproject.org/meta-raspberrypi
+    cd meta-raspberrypi/
+    git reset --hard cc64d6324d1543f009f0c010d720e74b7cb9f5d5
+    cd ..
+11. git clone git://github.com/mozilla-japan/meta-browser.git
+    cd meta-browser/
+    git reset --hard 14199ac070905b101e7bb0919748986c33374649
+    cd ..
+    # NOTICE: You might need to checkout branch firefox-45.0esr:
+    # git checkout -b firefox-45.0esr origin/firefox-45.0esr
+12. git clone git@github.com:comodoo/meta-comodoo.git
+    # Or git clone git://github.com/comodoo/meta-comodoo.git
+13. source oe-init-build-env
+14. cd conf/
+15. nano bblayers.conf
     # Edit var BBLAYERS as follows:
 BBLAYERS ?= " \
     /path/to/yocto/meta \
@@ -115,7 +140,7 @@ BBLAYERS ?= " \
     /path/to/yocto/meta-small-arm-extra \
   "
 
-13. nano local.conf
+16. nano local.conf
     # Add following line to the end of the file:
 MACHINE ?= "raspberrypi3"
 
@@ -152,8 +177,8 @@ BBMASK_append = " \
     /meta-small-arm-extra/recipes-support \
 "
 
-14. cd ..
-15. bitbake comodoo-image-pos
+17. cd ..
+18. bitbake comodoo-image-pos
 
 
 II. (a) Build configuration
@@ -161,26 +186,26 @@ II. (a) Build configuration
 
 BB_VERSION        = "1.30.0"
 BUILD_SYS         = "x86_64-linux"
-NATIVELSBSTRING   = "universal"
+NATIVELSBSTRING   = "Ubuntu-16.04"
 TARGET_SYS        = "arm-poky-linux-gnueabi"
 MACHINE           = "raspberrypi3"
 DISTRO            = "poky"
-DISTRO_VERSION    = "2.1.1"
+DISTRO_VERSION    = "2.1.2"
 TUNE_FEATURES     = "arm armv7ve vfp thumb neon vfpv4 callconvention-hard cortexa7"
 TARGET_FPU        = "hard"
 meta
 meta-poky
-meta-yocto-bsp    = "krogoth:8c69f7d56cbd496aa01ba0738675a170826a536b"
+meta-yocto-bsp    = "krogoth:b4df9df4624a300923a5dfc5a8f7157bef145a2a"
 meta-browser      = "firefox-45.0esr:14199ac070905b101e7bb0919748986c33374649"
 meta-openstack    = "master:6043a4a17dc5ca9080dac7789e38620b7b1aa372"
 meta-comodoo
-meta-rpi-fixed-fb = "master:aa0e9d6526b83b4029de6284db20a6e6e0043a7d"
-meta-openbmc      = "master:d92449abeadec00df6ddfec58a53a0969721dabe"
+meta-rpi-fixed-fb = "master:4f2ae753f1790011ec2089f6b1f2929639615e46"
+meta-openbmc      = "helium:d92449abeadec00df6ddfec58a53a0969721dabe"
 meta-gnome
 meta-oe
 meta-python       = "krogoth:895b25b387cae428c38990f4d2747603ee9dc92d"
 meta-raspberrypi  = "master:cc64d6324d1543f009f0c010d720e74b7cb9f5d5"
-meta-small-arm-extra = "master:f0f64dcea0dfe5aafacb5b607002cc2acb6aa512"
+meta-small-arm-extra = "morty:f0f64dcea0dfe5aafacb5b607002cc2acb6aa512"
 
 
 III. Build an image for Rpi3 & 'Eleduino 7.0 Inch 1024x600 Touch Screen' with VNC support
@@ -189,9 +214,9 @@ III. Build an image for Rpi3 & 'Eleduino 7.0 Inch 1024x600 Touch Screen' with VN
 To build an image for this hardware:
 
 - RaspberryPi 3
-- Eleduino 7.0 Inch 1024x600 Pixel IPS Hdmi Input Capacitive Touch Screen[1]
+- Eleduino 7.0 Inch 1024x600 Pixel IPS Hdmi Input Capacitive Touch Screen[2]
 
-Follow the same steps described in section II but in steps 13,
+Follow the same steps described in section II but in step 15,
 modify the file bblayers.conf with this content instead:
 BBLAYERS ?= " \
   /path/to/yocto/meta \
@@ -215,26 +240,26 @@ III. (a) Build configuration
 
 BB_VERSION        = "1.30.0"
 BUILD_SYS         = "x86_64-linux"
-NATIVELSBSTRING   = "universal"
+NATIVELSBSTRING   = "Ubuntu-16.04"
 TARGET_SYS        = "arm-poky-linux-gnueabi"
 MACHINE           = "raspberrypi3"
 DISTRO            = "poky"
-DISTRO_VERSION    = "2.1.1"
+DISTRO_VERSION    = "2.1.2"
 TUNE_FEATURES     = "arm armv7ve vfp thumb neon vfpv4 callconvention-hard cortexa7"
 TARGET_FPU        = "hard"
 meta
 meta-poky
-meta-yocto-bsp    = "krogoth:8c69f7d56cbd496aa01ba0738675a170826a536b"
+meta-yocto-bsp    = "krogoth:b4df9df4624a300923a5dfc5a8f7157bef145a2a"
 meta-browser      = "firefox-45.0esr:14199ac070905b101e7bb0919748986c33374649"
 meta-openstack    = "master:6043a4a17dc5ca9080dac7789e38620b7b1aa372"
 meta-comodoo
-meta-rpi-eleduino-7inch-1024x600 = "master:aa0e9d6526b83b4029de6284db20a6e6e0043a7d"
-meta-openbmc      = "master:d92449abeadec00df6ddfec58a53a0969721dabe"
+meta-rpi-eleduino-7inch-1024x600 = "master:4f2ae753f1790011ec2089f6b1f2929639615e46"
+meta-openbmc      = "helium:d92449abeadec00df6ddfec58a53a0969721dabe"
 meta-gnome
 meta-oe
 meta-python       = "krogoth:895b25b387cae428c38990f4d2747603ee9dc92d"
 meta-raspberrypi  = "master:cc64d6324d1543f009f0c010d720e74b7cb9f5d5"
-meta-small-arm-extra = "master:f0f64dcea0dfe5aafacb5b607002cc2acb6aa512"
+meta-small-arm-extra = "morty:f0f64dcea0dfe5aafacb5b607002cc2acb6aa512"
 
 
 IV. HOWTO launch the kiosk
@@ -269,4 +294,5 @@ V. Know issues during WIFI configuration
   device. On the bright side, it will automatically reconnect after
   the reboot.
 
-[1] http://www.eleduino.com/7-0-Inch-1024x600-Pixel-IPS-Hdmi-Input-Capacitive-Touch-Screen-Support-Raspberry-pi-Banana-Pi-Pro-Be-p10533.html
+[1] http://www.yoctoproject.org/docs/2.2.1/mega-manual/mega-manual.html#required-packages-for-the-host-development-system
+[2] http://www.eleduino.com/7-0-Inch-1024x600-Pixel-IPS-Hdmi-Input-Capacitive-Touch-Screen-Support-Raspberry-pi-Banana-Pi-Pro-Be-p10533.html
